--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Salon 155 - Hair & Nail Studio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/creative.css" rel="stylesheet">
 
   </head>
 
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Salon 155</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +57,11 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 id="homeHeading">Invest in your hair, it is the crown you never take off.</h1>
           <hr>
-          <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <p>Our friendly team of staff have many years of hairdressing experience between them. So if you fancy a cut or colour, want to create a brand new look or simply help in maintaining your style, the Salon 155 stylists are here to help and advise.
+</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Read More</a>
         </div>
       </div>
     </header>
@@ -71,8 +72,8 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded">Jelly-o muffin marshmallow gummi bears. Dessert cotton candy dragée sweet pie dessert dessert icing candy. Cake marzipan cake carrot cake sesame snaps gummies chocolate bar.</p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Learn More</a>
           </div>
         </div>
       </div>
@@ -92,29 +93,29 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-              <h3>Sturdy Templates</h3>
-              <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+              <h3>Hair Styling</h3>
+              <p class="text-muted">Candy lemon drops sugar plum. Apple pie toffee tart tootsie roll fruitcake cookie.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-              <h3>Ready to Ship</h3>
-              <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+              <h3>HD Eyebrows</h3>
+              <p class="text-muted">Candy lemon drops sugar plum. Apple pie toffee tart tootsie roll fruitcake cookie.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-              <h3>Up to Date</h3>
-              <p class="text-muted">We update dependencies to keep things fresh.</p>
+              <h3>Facials/Massage</h3>
+              <p class="text-muted">Candy lemon drops sugar plum. Apple pie toffee tart tootsie roll fruitcake cookie.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-              <h3>Made with Love</h3>
-              <p class="text-muted">You have to make your websites with love these days!</p>
+              <h3>Nails</h3>
+              <p class="text-muted">Candy lemon drops sugar plum. Apple pie toffee tart tootsie roll fruitcake cookie.</p>
             </div>
           </div>
         </div>
@@ -130,10 +131,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Image 1
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Description 1
                   </div>
                 </div>
               </div>
@@ -145,10 +146,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Image 2
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Description 2
                   </div>
                 </div>
               </div>
@@ -160,10 +161,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Image 3
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Description 3
                   </div>
                 </div>
               </div>
@@ -175,10 +176,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Image 4
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Description 4
                   </div>
                 </div>
               </div>
@@ -190,10 +191,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Image 5
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Description 5
                   </div>
                 </div>
               </div>
@@ -205,10 +206,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Image 6
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Description 6
                   </div>
                 </div>
               </div>
@@ -220,8 +221,9 @@
 
     <div class="call-to-action bg-dark">
       <div class="container text-center">
-        <h2>Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-default btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2>Latest Offers/News</h2>
+          <p>Area for any latest offers and/or news...</p>
+        <!--<a class="btn btn-default btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>-->
       </div>
     </div>
 
@@ -229,21 +231,20 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">Get In Touch!</h2>
             <hr class="primary">
-            <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p>Sweet cotton candy cake cheesecake soufflé liquorice chupa chups. Wafer icing candy canes donut. Gingerbread liquorice chocolate bar. Gummies gummies cupcake dragée powder cupcake cookie chocolate cake caramels.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p>123-456-6789</p>
+            <p>020 8866 7639</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-            <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
-            </p>
+            <a href="https://www.facebook.com/Salon155/" target="_blank">  
+                <i class="fa fa-facebook fa-3x sr-contact"></i>
+            </a>
           </div>
         </div>
       </div>
